# table-stdio

./: .gitignore  Makefile.am  README.md  configure.ac  shell.nix  smtpd-tables.7  table-procexec.c  table-stdio.c
api/: log.c  smtpd-api.h  table_api.c  util.c
openbsd-compat/: freezero.c  getdtablecount.c  getprogname.c  imsg-buffer.c  imsg.c  openbsd-compat.h  recallocarray.c
